--- a/app/views/users/footprints.html.slim
+++ b/app/views/users/footprints.html.slim
@@ -3,16 +3,16 @@ h1 あしあと
 - if current_user.footprints.present?
 	- current_user.footprints.reverse.each do |footprint|
 		- user = User.find(footprint.leave_id)
-		- leave_time = (Time.zone.now - footprint.created_at) / 60
+		- leave_time = (Time.zone.now - footprint.created_at).floor / 60
 		.d-inline-block.mb-3.mr-3.w-25.border.border-dark.rounded
 			- if !user.image.url.nil?
 				.d-inline-block.col-md-auto= image_tag user.image.url(:thumb)
 			- if leave_time >= 1440
-				.d-inline-block.col-md-auto.float-right= "#{(leave_time / 1440).floor}日前"
+				.d-inline-block.col-md-auto.float-right= "#{leave_time / 1440}日前"
 			- elsif leave_time < 1440 && leave_time >= 60
-				.d-inline-block.col-md-auto.float-right= "#{(leave_time / 60).floor}時間前"
+				.d-inline-block.col-md-auto.float-right= "#{leave_time / 60}時間前"
 			- else
-				.d-inline-block.col-md-auto.float-right= "#{leave_time.floor}分前"
+				.d-inline-block.col-md-auto.float-right= "#{leave_time}分前"
 			.col-md-auto= link_to user.name, other_path(user.id)
 - else
 	= "あしあとはありません"
