update(改修&機能追加)
ユーザーの検索時にはPOSTメソッドを使用するように修正
コミュニティの画像アップロード機能の修正
コミュニティの検索機能を追加
コミュニティの更新機能を追加

--- a/app/views/users/search.html.slim
+++ b/app/views/users/search.html.slim
@@ -1,6 +1,6 @@
 h1 ユーザー検索 条件入力
 
-= search_form_for(@q, url:result_path) do |f|
+= search_form_for(@q, url:users_result_path, html: { method: :post }) do |f|
 	.form-group
 		= f.label :name_cont, 'ユーザー名'
 		br
