--- a/app/views/users/result.html.slim
+++ b/app/views/users/result.html.slim
@@ -10,4 +10,4 @@ h1 ユーザー検索 結果
 - else
 	= "該当するユーザーはいません。"
 br
-= link_to '戻る', search_path, class: 'btn btn-secondary mr-3'
+= link_to '戻る', users_search_path, class: 'btn btn-secondary mr-3'
