--- a/app/views/users/other.html.slim
+++ b/app/views/users/other.html.slim
@@ -38,3 +38,7 @@ table.table
 							- if !community.icon.url.nil?
 								.col-md-auto= image_tag community.icon.url(:thumb)
 							.col-md-auto= link_to community.name, community_path(community.id)
+- if @already_like
+	= link_to 'いいね済', '#', class: 'btn btn-secondary disabled mr-3'
+- else
+	= button_to 'いいね！', {controller: 'users', action: 'like'}, {method: :get, params: {id: @user.id}, class: 'btn btn-primary mr-3'}
