--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,5 @@
 h1
-  = "マッチングアプリ　" + t('.sign_up')
+  = "お相手さがし　" + t('.sign_up')
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = bootstrap_devise_error_messages!
   .form-group
