--- a/app/views/communities/search.html.slim
+++ b/app/views/communities/search.html.slim
@@ -1,8 +1,5 @@
-h1 コミュニティ検索 条件入力
-
-= search_form_for(@q, url:communities_result_path, html: { method: :post }) do |f|
-	.form-group
-		= f.label :name_cont, 'コミュニティ名'
-		br
-		= f.search_field :name_cont, class: 'form-control'
-	= f.submit '検索する', class: 'btn btn-primary'
+#display-area
+	- if @display_result
+		= render partial: "communities/result"
+	- else
+		= render partial: "communities/search_form"
