update(機能追加&改修)
検索結果の画像部分にリンクを追加
新着メッセージがあるか見張り、あった場合にメッセージを出すように修正

--- a/app/views/communities/_result.html.slim
+++ b/app/views/communities/_result.html.slim
@@ -4,7 +4,7 @@ h1 コミュニティ検索 結果
 	- @communities.each do |community|
 		.d-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
 			- if !community.icon.url.nil?
-				.col-md-auto= image_tag community.icon.url(:thumb)
+				.col-md-auto= link_to image_tag(community.icon.url(:thumb)), community
 			.col-md-auto= link_to community.name, community
 - else
 	= "該当するコミュニティはありません。"
