--- a/app/views/matches/show.html.slim
+++ b/app/views/matches/show.html.slim
@@ -1,43 +1,13 @@
 = stylesheet_link_tag    "matches", media: 'all'
 
-h1 メッセージ
-
+#new-message.text-center.bg-white.d-none
+	= link_to "新しいメッセージがあります。", matches_show_path(@match.id), remote: true
+br
 #message-area
-	table.table.table-borderless
-		tbody
-			- @match.messages.each do |message|
-				tr
-					td.pb-1
-						- messageTimeYmd = message.created_at.in_time_zone("Tokyo").strftime("%Y/%m/%d")
-						- messageTimeHm = message.created_at.in_time_zone("Tokyo").strftime("%H:%M")
-						- if messageTimeYmd != @beforeTime
-							- @beforeTime = messageTimeYmd
-							.w-100.text-center.border-top
-								= messageTimeYmd
-						- if message.speaker_id == current_user.id
-							- if !current_user.image.nil?
-								.speaker-icon.text-right.float-right.pt-0.pl-0.pb-0
-									= image_tag current_user.image.url(:thumb), size: "50x50"
-							div id="msges-#{message.id}" class="pr-1 mr-1 ml-1 w-25 text-right border border-dark rounded float-right"
-								= message.text
-							.float-right = messageTimeHm
-							tr
-								td.speaker-name.text-right.float-right.pt-0
-									= current_user.name
-						- else
-							- speaker = User.find(message.speaker_id)
-							- if !speaker.image.nil?
-								.speaker-icon.text-left.float-left.pt-0.pr-0.pb-0
-									= image_tag speaker.image.url(:thumb), size: "50x50"
-							div id="msges-#{message.id}" class="pl-1 mr-1 ml-1 w-25 text-left border border-dark rounded float-left"
-								= message.text
-							.float-left = messageTimeHm
-							tr
-								td.speaker-name.text-left.float-left.pt-0
-									= speaker.name
+	= render partial: "matches/message_area"
 
 #form-area.fixed-bottom.bg-white.ml-auto.mr-auto.pb-2
-	= form_with model: Message.new, local: true do |f|
+	= form_with model: Message.new, remote: true do |f|
 		.form-group
 			= f.hidden_field :matching_id, value: @match.id
 		.form-group
