--- a/app/views/users/_result.html.slim
+++ b/app/views/users/_result.html.slim
@@ -5,7 +5,7 @@ h1 ユーザー検索 結果
 		- if user.id != current_user.id
 			.d-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
 				- if !user.image.url.nil?
-					.col-md-auto= image_tag user.image.url(:thumb)
+					.col-md-auto= link_to image_tag(user.image.url(:thumb)), other_path(user.id)
 				.col-md-auto= link_to user.name, other_path(user.id)
 	= paginate @users, remote: true
 - else
