--- a/app/views/matches/show.html.slim
+++ b/app/views/matches/show.html.slim
@@ -1,4 +1,5 @@
 = stylesheet_link_tag    "matches", media: 'all'
+= javascript_include_tag "matches"
 
 #new-message.text-center.bg-white.d-none
 	= link_to "新しいメッセージがあります。", matches_show_path(@match.id), remote: true
