--- a/app/views/users/show_matches.html.slim
+++ b/app/views/users/show_matches.html.slim
@@ -8,7 +8,7 @@ h1 マッチング一覧
 			- matching_user = User.find(matching.from_user_id)
 		.d-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
 			- if !matching_user.image.url.nil?
-				.d-inline-block.col-md-auto= image_tag matching_user.image.url(:thumb)
+				.d-inline-block.col-md-auto= link_to image_tag(matching_user.image.url(:thumb)), matches_show_path(matching.id)
 			.col-md-auto= link_to matching_user.name, matches_show_path(matching.id)
 - else
 	= "マッチングしたユーザーはいません。"
