--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,15 +1,19 @@
 .form-group
   - if controller_name != 'sessions'
-    = link_to "メールアドレスで" + t(".sign_in"), new_session_path(resource_name)
+    = link_to t(".sign_in"), new_session_path(resource_name)
     br
   - if devise_mapping.omniauthable?
     - resource_class.omniauth_providers.each do |provider|
       - case OmniAuth::Utils.camelize(provider)
       - when 'Twitter'
-        = link_to omniauth_authorize_path(resource_name, provider), method: :post, class: 'btn btn-social btn-twitter' do
+        = link_to omniauth_authorize_path(resource_name, provider), method: :post, class: 'btn btn-social btn-twitter mr-2' do
           i.fab.fa-twitter
           = t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider))
-        br
+      - when 'Facebook'
+        = link_to omniauth_authorize_path(resource_name, provider), method: :post, class: 'btn btn-social btn-facebook mr-2' do
+          i.fab.fa-twitter
+          = t('.sign_in_with_provider', provider: OmniAuth::Utils.camelize(provider))
+    br
   - if devise_mapping.registerable? && controller_name != 'registrations'
     = link_to t(".sign_up"), new_registration_path(resource_name)
     br
