--- a/app/views/matches/_message_area.html.slim
+++ b/app/views/matches/_message_area.html.slim
@@ -3,7 +3,7 @@ table.table.table-borderless
 	tbody
 		- @match.messages.each do |message|
 			tr
-				td.pb-1
+				td.pb-2
 					- messageTimeYmd = message.created_at.in_time_zone("Tokyo").strftime("%Y/%m/%d")
 					- messageTimeHm = message.created_at.in_time_zone("Tokyo").strftime("%H:%M")
 					- if messageTimeYmd != @beforeTime
@@ -14,22 +14,22 @@ table.table.table-borderless
 						- if !current_user.image.nil?
 							.speaker-icon.text-right.float-right.pt-0.pl-0.pb-0
 								= image_tag current_user.image.url(:thumb), size: "50x50"
-						div id="msges-#{message.id}" class="pr-1 mr-1 ml-1 w-25 text-right border border-dark rounded float-right"
+						div class="mes mr-1 ml-1 text-right border border-dark rounded float-right"
 							p.id.d-none = message.id
-							= message.text
+							= simple_format(message.text, align: 'left', class: 'mb-0 pr-1 pl-1')
 						.float-right = messageTimeHm
-						tr
-							td.speaker-name.text-right.float-right.pt-0
-								= current_user.name
+						/ tr
+						/ 	td.speaker-name.text-right.float-right.pt-0
+						/ 		= current_user.name
 					- else
 						- speaker = User.find(message.speaker_id)
 						- if !speaker.image.nil?
 							.speaker-icon.text-left.float-left.pt-0.pr-0.pb-0
 								= link_to image_tag(speaker.image.url(:thumb), size: "50x50"), other_path(speaker.id)
-						div id="msges-#{message.id}" class="pl-1 mr-1 ml-1 w-25 text-left border border-dark rounded float-left"
+						div class="mes mr-1 ml-1 text-left border border-dark rounded float-left"
 							p.id.d-none = message.id
-							= message.text
+							= simple_format(message.text, class: 'mb-0 pr-1 pl-1')
 						.float-left = messageTimeHm
-						tr
-							td.speaker-name.text-left.float-left.pt-0
-								= speaker.name
+						/ tr
+						/ 	td.speaker-name.text-left.float-left.pt-0
+						/ 		= speaker.name
