--- a/app/views/users/footprints.html.slim
+++ b/app/views/users/footprints.html.slim
@@ -6,7 +6,7 @@ h1 あしあと
 		- leave_time = (Time.zone.now - footprint.created_at).floor / 60
 		.d-inline-block.mb-3.mr-3.w-25.border.border-dark.rounded.text-center
 			- if !user.image.url.nil?
-				.d-inline-block.col-md-auto= image_tag user.image.url(:thumb)
+				.d-inline-block.col-md-auto= link_to image_tag(user.image.url(:thumb)), other_path(user.id)
 			- if leave_time >= 1440
 				.d-inline-block.col-md-auto.float-right= "#{leave_time / 1440}日前"
 			- elsif leave_time < 1440 && leave_time >= 60
