--- a/app/views/matches/show.html.slim
+++ b/app/views/matches/show.html.slim
@@ -15,6 +15,6 @@ br
 		.form-group
 			= f.hidden_field :speaker_id, value: current_user.id
 		.form-group
-			= f.text_area :text, rows: 5, maxlength: 255, class: 'form-control', id: 'text'
-		.count.nav.justify-content-end
-		= f.submit '送信', class: 'btn btn-primary'
+			= f.text_area :text, rows: 5, maxlength: 255, placeholder: 'メッセージを入力', class: 'form-control', id: 'text'
+		.count.nav.justify-content-end = "0 / 255文字"
+		= f.submit '送信', class: 'btn btn-primary', id: 'post-message'
