--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,4 +1,4 @@
-h1
+h1.text-center
   = t('.forgot_your_password')
 = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
   = bootstrap_devise_error_messages!
