--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -39,4 +39,4 @@ table.table
 								.col-md-auto= image_tag community.icon.url(:thumb)
 							.col-md-auto= link_to community.name, community_path(community.id)
 
-= link_to '編集する', edit_user_path(@user), class: 'btn btn-primary mr-3'
+= link_to '編集する', edit_user_path(@user), class: 'btn btn-primary mr-3 mb-3'
