--- a/app/views/communities/_result.html.slim
+++ b/app/views/communities/_result.html.slim
@@ -5,9 +5,13 @@ h2
 
 - if @communities.present?
 	- @communities.each do |community|
-		.d-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
+		.d-none.d-md-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
 			- if !community.icon.url.nil?
 				.col-md-auto= link_to image_tag(community.icon.url(:thumb)), community
+			.col-md-auto= link_to community.name, community
+		.d-inline-block.d-md-none.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
+			- if !community.icon.url.nil?
+				.col-md-auto= link_to image_tag(community.icon.url(:thumb), size: '50x50'), community
 			.col-md-auto= link_to community.name, community
 - else
 	= "該当するコミュニティはありません。"
