--- a/app/views/users/_result.html.slim
+++ b/app/views/users/_result.html.slim
@@ -6,9 +6,13 @@ h2
 - if @users.present?
 	- @users.each do |user|
 		- if user.id != current_user.id
-			.d-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
+			.d-none.d-md-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
 				- if !user.image.url.nil?
 					.col-md-auto= link_to image_tag(user.image.url(:thumb)), other_path(user.id)
+				.col-md-auto= link_to user.name, other_path(user.id)
+			.d-inline-block.d-md-none.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
+				- if !user.image.url.nil?
+					.col-md-auto= link_to image_tag(user.image.url(:thumb), size: '50x50'), other_path(user.id)
 				.col-md-auto= link_to user.name, other_path(user.id)
 	= paginate @users, remote: true
 - else
