--- a/app/views/communities/new.html.slim
+++ b/app/views/communities/new.html.slim
@@ -18,4 +18,4 @@ h2 コミュニティ作成
 	.form-group
 		= f.label :name, 'コミュニティ名'
 		= f.text_field :name, class: 'form-control'
-	= f.submit nil, class: 'btn btn-primary'
+	= f.submit '作成する', class: 'btn btn-primary'
