--- a/app/views/communities/show.html.slim
+++ b/app/views/communities/show.html.slim
@@ -1,24 +1,26 @@
 h2 コミュニティ詳細
 
-table.table
+table.table.table-borderless
 	tbody
-		tr.row
-			th.col-md-auto= Community.human_attribute_name(:icon)
+		tr.row.border-bottom
+			th.col-auto= Community.human_attribute_name(:icon)
 			- if !@community.icon.url.nil?
-				td.col-md-auto= image_tag @community.icon.url(:thumb)
-		tr.row
-			th.col-md-auto= Community.human_attribute_name(:name)
-			td.col-md-auto= @community.name
+				td.d-none.d-md-inline-block.col-auto= image_tag @community.icon.url(:thumb)
+				td.d-inline-block.d-md-none.col-auto= image_tag @community.icon.url(:thumb), size: '50x50'
+		tr.row.border-bottom
+			th.col-auto= Community.human_attribute_name(:name)
+			td.col-auto= @community.name
 		- if @member
-			tr.row
-				th.col-md-auto= "参加メンバー一覧"
+			tr.row.border-bottom
+				th.col-auto= "参加メンバー一覧"
 				td.col-md-10
 					- @community.users.each do |user|
 						- if user.id != current_user.id
 							.d-inline-block.text-center.mb-3.mr-3.w-25.border.border-dark.rounded
 								- if !user.image.url.nil?
-									.col-md-auto= image_tag user.image.url(:thumb)
-								.col-md-auto= link_to user.name, other_path(user.id)
+									.d-none.d-md-inline-block.col-auto= image_tag user.image.url(:thumb)
+									.d-inline-block.d-md-none.col-auto= image_tag user.image.url(:thumb), size: '50x50'
+								.col-auto.text-break= link_to user.name, other_path(user.id)
 - if @community.created_id == current_user.id
 	= link_to '編集する', edit_community_path(@community), class: 'btn btn-primary mr-3'
 	= link_to '削除する', @community, method: :delete, data: { confirm: "コミュニティを削除します。よろしいですか？" }, class: 'btn btn-danger'
