--- a/app/views/matches/show.html.slim
+++ b/app/views/matches/show.html.slim
@@ -16,5 +16,6 @@ br
 			= f.hidden_field :speaker_id, value: current_user.id
 		.form-group
 			= f.text_area :text, rows: 5, maxlength: 255, placeholder: 'メッセージを入力', class: 'form-control', id: 'text'
-		.count.nav.justify-content-end = "0 / 255文字"
+			= f.text_area :text, rows: 2, maxlength: 255, placeholder: 'メッセージを入力', class: 'form-control', id: 'text-narrow'
+		.count.nav.justify-content-end.float-right = "0 / 255文字"
 		= f.submit '送信', class: 'btn btn-primary', id: 'post-message'
