--- a/app/views/users/footprints.html.slim
+++ b/app/views/users/footprints.html.slim
@@ -24,7 +24,17 @@ h2 あしあと
 			- else
 				.d-inline-block.col-auto.float-right= "#{leave_time}分前"
 			.col-auto.text-left.pl-4= link_to user.name, other_path(user.id)
-		.d-inline-block.d-md-none.mb-3.mr-3.w-25.border.border-dark.rounded
+		.d-none.d-sm-inline-block.d-md-none.mb-3.mr-3.w-25.border.border-dark.rounded
+			- if !user.image.url.nil?
+				.d-inline-block.col-auto.pr-0= link_to image_tag(user.image.url(:thumb), size: '50x50'), other_path(user.id)
+			- if leave_time >= 1440
+				.d-inline-block.col-auto.float-right.pl-0.pr-1= "#{leave_time / 1440}日前"
+			- elsif leave_time < 1440 && leave_time >= 60
+				.d-inline-block.col-auto.float-right.pl-0.pr-1= "#{leave_time / 60}時間前"
+			- else
+				.d-inline-block.col-auto.float-right.pl-0.pr-1= "#{leave_time}分前"
+			.col-auto.text-left.pl-3= link_to user.name, other_path(user.id)
+		.d-inline-block.d-sm-none.mb-3.mr-3.w-50.border.border-dark.rounded
 			- if !user.image.url.nil?
 				.d-inline-block.col-auto.pr-0= link_to image_tag(user.image.url(:thumb), size: '50x50'), other_path(user.id)
 			- if leave_time >= 1440
