--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -8,7 +8,7 @@
 	table.table.table-borderless.border.text-center
 		tr
 			td.pb-0.align-middle.d-none.d-md-table-cell
-				= link_to image_tag(current_user.image.url(:thumb200)), user_path(current_user.id)
+				= link_to image_tag(current_user.image.url(:thumb200), size: '200x200'), user_path(current_user.id)
 			td.pb-0.align-middle.d-table-cell.d-md-none
 				= link_to image_tag(current_user.image.url(:thumb200), size: '150x150'), user_path(current_user.id)
 			td.p-0.w-50.d-none.d-md-table-cell rowspan="2"
