--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -39,7 +39,7 @@
 		tr
 			td.pt-0.align-top
 				p = current_user.name
-	table.table.table-bordered.mb-0.d-table-cell.d-md-none
+	table.table.table-bordered.mb-0.d-table.d-md-none
 		th.thead-dark.text-center.border-bottom.table-secondary = "通知"
 		tr
 			td#info-table.p-0
